--- a/Email_Team_HTML_Test.html
+++ b/Email_Team_HTML_Test.html
@@ -84,8 +84,8 @@ img {
   font-size:16px;
   line-height:25px;
   text-align:left;
-  padding-right: 25px;
-  padding-left: 25px;
+  padding-right:25px;
+  padding-left:25px;
 }
 
 .footer-text {
@@ -166,6 +166,7 @@ img {
   line-height:25px !important;
   color:#545454 !important;
   text-align:left !important;
+  padding: 0!important;
 }
 
 .banner {
